Add jdk.incubator.vector and support it in notebook. Fixes #158